fix SC1091 notes with ShellCheck
Check all files together to prevent these notes:

```
./bash-n-simplebot:32:8: note: Not following: bash-n-client was not specified as input (see shellcheck -x). [SC1091]
./bash-n-towerbot:33:8: note: Not following: bash-n-client was not specified as input (see shellcheck -x). [SC1091]
./bash-n-slothbot:30:8: note: Not following: bash-n-client was not specified as input (see shellcheck -x). [SC1091]
./bash-n-failbot:30:8: note: Not following: bash-n-client was not specified as input (see shellcheck -x). [SC1091]
```

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,3 +9,6 @@ jobs:
       run: make test
     - name: shellcheck
       uses: ludeeus/action-shellcheck@2.0.0
+      with:
+        check_together: 'yes'
+        additional_files: 'bash-n-client'
