--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,12 @@
+---
 name: Tests
-on: [push]
+on:
+  push:
+  pull_request:
+    types: [opened]
+  schedule:
+    - cron: '16 19 25 * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
